public/assets/css/custom_shared.css
.main_map_title
{
    margin:10px 10px 10px 22px !important;
    font-family: 'ralewaybold';
    text-align: center;
}

iframe{
    border: 0px;
}

.shared_vertical_row .ml-placessec .col-lg-12{
    float: left;
    /*height: 160px;*/
    width: 260px;
}

.shared_vertical_row{
    /*height: 55% !important;*/
    overflow: none;
}

.shared_vertical_row .left_side_container{
    /*height: auto;*/
    overflow: hidden;
}
.single-item{
    padding-bottom: 0px !important;
}

.shared_vertical_row #video_search_res{
    padding-bottom: 0px !important;
    padding: 10px;
}

.shared_vertical_row .form-groupx{
    top: 10px;
}

.left_side_container{
    padding-right: 0px;
    overflow-y: scroll;
    overflow-x: hidden;
    font-family: ralewayregular, sans-serif;
    /*height: 600px;*/
    width:90%;
}

.sh_container {
    width:100%;
    /*height:600px;*/
    border:1px solid;
}
.left {
    width:auto;
    height:600px;
    overflow:hidden;
}
.right {
    /*height:600px;*/
    width:370px;
    float:left;
    overflow: hidden;
}

.slick-next{
     top: 125px;
    left: -webkit-calc(100% - 58px);
    left:    -moz-calc(100% - 58px);
    left:         calc(100% - 58px);
    background: white !important;
 }

.slick-prev{
    top: 125px;
    left: -webkit-calc(16px);
    left:    -moz-calc(16px);
    left:         calc(16px);
    z-index: 10000;
    background: white !important;
}

.slick-prev::before {
    content: '←';
}

.slick-next::before {
    content: '→';
}

.single-item{
    padding: 0px !important;
}

@media screen and (max-width: 700px) {
    .ml-placessec .places {
        margin-left: 5px;
        padding-left: 5px;

        margin-right: 14px;
        padding-right: 5px;
    }
}

@media screen and (max-width: 700px){
    .ml-placessec .places {
        width: 97% !important;
    }
}

.left .participate{
    width: 60px !important;
    height: 60px !important;
}

.left .form-groupx{
    left: 35px;
}

#video_search_res .col-lg-12{
    padding-left: 0px !important;
}

